kustomize/dev/mentum-eks-cluster-dev/frontend/merchant/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.mentum.dev/name: merchant
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: frontend
    app.mentum.dev/resourceType: Deployment
  name: merchant
  namespace: mentum
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.mentum.dev/name: merchant
      app.mentum.dev/tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.mentum.dev/name: merchant
        app.mentum.dev/tier: frontend
    spec:
      containers:
      - image: 238975939821.dkr.ecr.us-east-1.amazonaws.com/merchant:fb38aa389a165b93f0cf84a4741d16b080e55e0c
        imagePullPolicy: Always
        name: default
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
