kustomize/dev/mentum-eks-cluster-dev/frontend/merchant/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.mentum.dev/name: merchant
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: frontend
    app.mentum.dev/resourceType: Service
  name: merchant
  namespace: mentum
spec:
  type: ClusterIP
  ports:
  - name: merchant-port
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.mentum.dev/name: merchant
