kustomize/dev/mentum-eks-cluster-dev/frontend/merchant/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: merchant
  labels:
    name: merchant
  namespace: mentum
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - pathType: Prefix
        path: /merchant
        backend:
          service:
            name: merchant
            port: 
              number: 80
