kustomize/dev/mentum-eks-cluster-dev/frontend/merchant/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /merchant/$2
  name: merchant-ingress
  namespace: mentum
  labels:
    name: merchant
spec:
  ingressClassName: public-nginx
  rules:
  - host: dev.mentumqr.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /merchant(/|$)(.*)
        backend:
          service:
            name: mentum-dev-frontend-merchant
            port: 
              number: 80
  - host: merchant.dev.mentumqr.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /(/|$)(.*)
        backend:
          service:
            name: mentum-dev-frontend-merchant
            port: 
              number: 80
